--- a/index.html
+++ b/index.html
@@ -12,29 +12,37 @@
 <body>
     <div class="main-box">
         <div class="output">
-
+           <div class="power"> <i class="fa-solid fa-power-off operator number"  id="power"  onclick='window.close()'></i></div>
+           <div class="op-text">
+               <span class="text-ans" id="display1"></span>
+               <span class="text" id="display" > </span>
+           </div>
         </div>
         <div class="input">
-            <div class="number"> <i class="fa-solid fa-c"></i></div>
-            <div class="number"> <i class="fa-solid fa-percent"></i></div>
-            <div class="number"><i class="fa-solid fa-delete-left"></i> </div>
-            <div class="number"><i class="fa-solid fa-divide"> </i></div>
-            <div class="number"> <i class="fa-solid fa-7"></i></div>
-            <div class="number"> <i class="fa-solid fa-8"></i></div>
-            <div class="number"> <i class="fa-solid fa-9"></i></div>
-            <div class="number"><i class="fa-solid fa-xmark"></i> </div>
-            <div class="number"> <i class="fa-solid fa-4"></i></div>
-            <div class="number"> <i class="fa-solid fa-5"></i></div>
-            <div class="number"> <i class="fa-solid fa-6"></i></div>
-            <div class="number"> <i class="fa-solid fa-minus"></i> </div>
-            <div class="number"> <i class="fa-solid fa-1"></i></div>
-            <div class="number"> <i class="fa-solid fa-2"></i></div>
-            <div class="number"> <i class="fa-solid fa-3"></i></div>
-            <div class="number"><i class="fa-solid fa-plus"></i></div>
-            <div class="number"></div>
-            <div class="number"> <i class="fa-solid fa-0"></i></div>
-            <div class="number"> <i class="fa-solid fa-circle-small"></i></i></i></div>
-            <div class="number"><i class="fa-solid fa-equals"></i> </div>
+            <button class="number fa-solid " >c</button>
+            <button class="number fa-solid  operator extra"></button>
+            <button class="number  fa-solid operator extra"> </button>
+            <button class="number fa-solid  operator">⌫</button>
+            <button class="number fa-solid  operator"> √</button>
+            <button class="number fa-solid  fa-x operator "><sup>y</sup></button>
+            <button class="number fa-solid  operator"> %</i></button>
+            <button class="number fa-solid  operator">÷</button>
+            <button class="number fa-solid  num"> 7</button>
+            <button class="number fa-solid  num"> 8</button>
+            <button class="number fa-solid  num"> 9</button>
+            <button class="number fa-solid  operator">x </button>
+            <button class="number fa-solid  num"> 4</button>
+            <button class="number fa-solid  num">5</button>
+            <button class="number fa-solid  num">6</button>
+            <button class="number fa-solid  operator">	−</button>
+            <button class="number fa-solid  num"> 1</button>
+            <button class="number fa-solid  num"> 2</button>
+            <button class="number fa-solid  num"> 3</button>
+            <button class="number fa-solid  operator">+</button>
+            <button class="number fa-solid  extra"></button>
+            <button class="number fa-solid  num"> 0</button>
+            <button class="number fa-solid  fa-circle dot num">.</button>
+            <button class="number fa-solid  operator">=</button>
         </div>
     </div>
 
