--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main-box">
         <div class="output">
-           <div class="power"> <i class="fa-solid fa-power-off operator number"  id="power"  onclick='window.close()'></i></div>
+           <div class="power"> <i class="fa-solid fa-power-off operator number"  id="power"  onclick='window.close("index.html")'></i></div>
            <div class="op-text">
                <span class="text-ans" id="display1"></span>
                <span class="text" id="display" > </span>
